@@ -52,7 +52,9 @@ function albumSort($a, $b) {
 }
 
 function bestDate($album) {
-	if (isset($album->fields['clicks_date']) && strtotime($album->fields["clicks_date"]) > strtotime($album->fields["last_mod_time"])) {
+	if (isset($album->fields['clicks_date']) &&
+	    strtotime($album->fields["clicks_date"]) > strtotime($album->fields["last_mod_time"]))
+	{
 		return $album->fields['clicks_date'];
 	}
 	else {
@@ -85,7 +87,7 @@ function getThumbsAndCaptions($album) {
 			$imgtag = $album->getThumbnailTag($i);
 			$caption = $photo->getCaption();
 			$photos .= "<a href=\"" . makeAlbumUrl($album->fields['name'], $i) . "\">" . $imgtag . "</a>";
-			$photos .= $caption . "<br>\n";
+			$photos .= nl2br($caption) . "<br>\n";
 		}
 	}
 
@@ -141,7 +143,7 @@ foreach ($rssAlbumList as $album) {
 		"link" => makeAlbumUrl($album->fields["name"]),
 		"guid" => array($album->fields['guid'], array("isPermaLink" => "false")),
 		"!date" => bestDate($album),
-		"title" => htmlspecialchars($album->fields["title"])
+		"title" => nl2br(htmlspecialchars($album->fields["title"]))
 	);
 
 	// DATE TAGS
@@ -160,7 +162,7 @@ foreach ($rssAlbumList as $album) {
 		method_exists($album, "canViewComments") && $album->canViewComments($gallery->user->uid))
 	{
 		$albumInfo["comments"] = makeGalleryUrl("view_comments.php",
-		array("set_albumName" => $album->fields["name"]));
+						array("set_albumName" => $album->fields["name"]));
 	}
 
 	// PHEED AND PHOTO TAGS
@@ -236,10 +238,10 @@ foreach ($rssAlbumList as $album) {
 		$url = makeAlbumUrl($album->fields["name"]);
 		$imgtag = $highlight->thumbnail->getTag($base, 0, 0, 'border=0');
 		$albumInfo["description"]  = "<a href=\"$url\">$imgtag</a><br>";
-		$albumInfo["description"] .= $album->fields["description"];
+		$albumInfo["description"] .= nl2br($album->fields["description"]);
 	}
 	else { # mode = "basic"
-		$albumInfo["description"] = $album->fields["description"];
+		$albumInfo["description"] = nl2br($album->fields["description"]);
 	}
 
 	$albumInfo["description"] = htmlspecialchars($albumInfo["description"]);
