@@ -25,6 +25,23 @@ if(! defined('READY_TO_INCLUDE') || READY_TO_INCLUDE  !== 'DISCO') {
     exit;
 }
 
+/*
+ * Some Settings
+ */
+
+// How much columns do you want? Its either the value from setup or if less, then its 3.
+$columns = min($gallery->app->albumsPerPage, 3);
+
+// What width should the boxes for thumbnails and text have?
+$boxWidth = floor(100/$columns - 2);
+
+// What heighz should the boxes for thumbnails and text have?
+$boxheight = $gallery->app->highlight_size + 185;
+
+/*
+ * End Settings
+*/
+
 if (!$GALLERY_EMBEDDED_INSIDE) {
 	doctype();
 ?>
@@ -33,9 +50,7 @@ if (!$GALLERY_EMBEDDED_INSIDE) {
   <title><?php echo $galleryTitle ?></title>
 <?php
 	common_header() ;
-
 	prefetchRootAlbumNav();
-
 	rootRSSLink();
 ?>
 </head>
@@ -44,27 +59,31 @@ if (!$GALLERY_EMBEDDED_INSIDE) {
 <?php
 }
 
+/*
+ * Header, do not remove it. Especially when you run Gallery embedded.
+ */
 includeTemplate('gallery.header', '', 'classic');
 
 echo $searchBar;
 
 // We do not longer use adminbox.inc here
 ?>
-<div class="g-adminbar">
-  <table width="100%">
-  <tr>
-      <td colspan="2" class="g-adminbarheader right"><?php echo $gallery_welcome ?></td>
-    </tr>
-    <tr>
-      <td class="g-adminbartext left"><?php echo $adminText ?></td>
-      <td class="g-adminbarcommands right">
-      		<?php echo makeIconMenu($iconElements, 'right'); ?>
-      </td>
-    </tr>
-  </table>
-</div>
-
+    <div class="g-adminbar">
+      <table width="100%">
+        <tr>
+	  <td colspan="2" class="g-adminbarheader right"><?php echo $gallery_welcome ?></td>
+	</tr>
+	<tr>
+	  <td class="g-adminbartext left"><?php echo $adminText ?></td>
+	  <td class="g-adminbarcommands right">
+	    <?php echo makeIconMenu($iconElements, 'right'); ?>
+	  </td>
+	</tr>
+      </table>
+    </div>
 <?php
+
+includeTemplate('headerbox.footer', '', 'classic');
 
 if ($navigator["maxPages"] > 1) {
     echo '<div class="g-navbar-top">';
@@ -72,26 +91,27 @@ if ($navigator["maxPages"] > 1) {
     echo '</div>';
 }
 
-echo languageSelector();
-
 echo infoBox($notice_messages, $notice_caption);
 
-$columns = min($gallery->app->albumsPerPage, 3);
-
-$boxWidth = floor(100/$columns - 2);
-$boxheight = $gallery->app->highlight_size+185;
-
 ?>
-
-<div style="width: 80%; margin: 0 auto;">
+<!-- album table begin -->
+<table cellpadding="0" cellspacing="2" class="g-albums-table-matrix">
+<tr>
 <?php
+$row = 0;
 foreach ($rootAlbum as $name => $content) {
-	$adminAlbumCommandsArray =  $content['albumdesc']['adminRootAlbumCommands'];
+	$adminAlbumCommandsArray = $content['albumdesc']['adminRootAlbumCommands'];
+
+	if($row % $columns == 0 && $row > 0) {
+		echo "\n</tr><tr>";
+	}
+
+	$row++;
     ?>
     <!-- Begin Album Column Block -->
-    <div style="width: <?php echo $boxWidth ?>%; margin: 2px;" class="floatleft">
+    <td class="g-albumthumb-cell" style="width: <?php echo $boxWidth ?>%;">
         <!-- Begin Image Cell -->
-        <div class="g-album-image-cell" style="height: <?php echo $gallery->app->highlight_size+15; ?>px">
+        <div class="g-album-image-cell" style="height: <?php echo $gallery->app->highlight_size+10; ?>px">
             <?php
         $gallery->html_wrap = $content['imageCell'];
         includeLayout('inline_imagewrap.inc');
@@ -100,7 +120,7 @@ foreach ($rootAlbum as $name => $content) {
         </div>
 
         <!-- Begin Text Cell -->
-        <div class="g-albumdesc-cell left" style="height: 150px; overflow: auto;">
+        <div class="g-albumdesc-cell" style="min-height: 100px; max-height: 150px; overflow: auto;">
            <table cellspacing="0" cellpadding="0" width="100%">
               <tr>
                  <td class="g-title-left"></td>
@@ -145,14 +165,14 @@ foreach ($rootAlbum as $name => $content) {
             </div>
         </div>
         <!-- End Text Cell -->
-    </div>
+    </td>
     <?php
 }
 ?>
-    <div class="clear"></div>
-</div>
 
-<!-- album "table" end -->
+</tr>
+</table>
+<!-- album table end -->
 
 <?php if ($displayCommentLegend) :?>
 <p><span class="g-commentIndication">*</span>
