@@ -1,3 +1,14 @@
+2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b5
+
+ * Fix: Little layout in search results.
+
+ * Fix: Use <br> linebreaks in RSS for titles captions etc.
+        Same like in "normal" view.
+
+ * Fix: Use of gTranslate in donation block template.
+
+ * Change: Tweaked Matrix startpage template.
+
 2008-11-01 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b4
 
  * Delete: Unused and now outdated template/skin files from Jade.
